--- a/style.css
+++ b/style.css
@@ -20,5 +20,36 @@ header {
     font-size: 26px;
 }
 section {
+    padding: 20px;
+    background-image: url(Images/Cópia\ de\ people.jpg);
+    background-size: cover;
+    overflow: hidden;
+
+}
+.formContainer {
+    max-width: 230px;
+    background-color: #ffffffBB;
+    padding: 20px;
+    float: right;
+}
+h2 {
+    font-size: 16px;
+}
+.mb{
+    margin-bottom: 15px;
+}
+input, select {
+    width: 100%;
+    box-sizing: border-box; 
+    padding: 10px;
+    border: none;
+    margin-bottom: 10px;
+}
+input[type="submit"] {
     color: white;
+    background-color: #48c5ce;
+    font-weight: bold;
+}
+select {
+    ap
 }
