--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
 }
 section {
     padding: 20px;
-    background-image: url(Images/Cópia\ de\ people.jpg);
+    background-image: url(imagens/Cópia\ de\ people.jpg);
     background-size: cover;
     overflow: hidden;
 
@@ -54,6 +54,31 @@ select {
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
-    
-    background-image: url('./Images/arrow.jpg');
+    background-image: url(imagens/Cópia\ de\ arrow.jpg);
+    background-repeat: no-repeat;
+    background-position: center right;
+}
+footer {
+    background-color: #0202121;
+    padding: 40px;
+    text-align: center;
+    }
+
+.picture {
+    width: 160px;
+}
+
+.description {
+    display: inline-block;
+    text-align: left;
+    color: white;
+    max-width: 40%;
+    margin-left: 30px;
+
+}
+.description p, .description h3 {
+    margin-bottom: 20px;
+}
+.description h3 {
+    font-size: 30px;
 }
